--- a/ichi.com/8-11/index.html
+++ b/ichi.com/8-11/index.html
@@ -87,7 +87,7 @@
         </div>
         <div>
           <img
-            src="/images/app_screen.png"
+            src="./images/app_screen.png"
             alt="アプリの画面1"
             class="picture-sec3"
           />
@@ -97,7 +97,7 @@
         <div class="back-text-2">point2</div>
         <div>
           <img
-            src="/images/app_screen.png"
+            src="./images/app_screen.png"
             alt="アプリの画面1"
             class="picture-sec3"
           />
@@ -126,7 +126,7 @@
         </div>
         <div>
           <img
-            src="/images/app_screen.png"
+            src="./images/app_screen.png"
             alt="アプリの画面1"
             class="picture-sec3"
           />
@@ -137,12 +137,12 @@
           <h1 class="dow_text">今すぐダウンロード!</h1>
           <div class="flex-2">
             <img
-              src="/images/app_store.png"
+              src="./images/app_store.png"
               alt="app_storeダウンロード"
               class="dow-img"
             />
             <img
-              src="/images/google_play.png"
+              src="./images/google_play.png"
               alt="google_playダウンロード"
               class="dow-img"
             />
