--- a/ichi.com/8-11/index.html
+++ b/ichi.com/8-11/index.html
@@ -59,93 +59,107 @@
         </div>
       </section>
 
-      <section id="Concept" class="sec sec2 target">
-        <h1 class="back-text">Concept</h1>
-        <h2>1人1人にあった <br />プレゼントを。</h2>
-        <p>
-          あの人はどんな<br />
-          誕生日プレゼントが欲しいのかな、、<br />
-          自分にはセンスがないから、、<br />
-          と、悩むあなたに。<br /><br />
-          思い出に残るプレゼントを<br />
-          簡単に、そして楽しく<br />
-          選べるように<br />
-          サポートします。<br />
-        </p>
-      </section>
-      <section id="Point" class="sec sec3 target">
-        <div class="back-text-1">point1</div>
-        <div class="point-text-1">
-          <h1>みんなのプレゼントを参考に</h1>
+      <section id="Concept">
+        <div class="sec sec2 target">
+          <h1 class="back-text">Concept</h1>
+          <h2>1人1人にあった <br />プレゼントを。</h2>
           <p>
-            誰かにもらったり、あげたりした<br />
-            プレゼントを投稿できます。<br />
-            タグもつけることができ、<br />
-            1人1人に合ったプレゼントが<br />
-            見つかります。
-          </p>
-        </div>
-        <div>
-          <img
-            src="./images/app_screen.png"
-            alt="アプリの画面1"
-            class="picture-sec3"
-          />
-        </div>
-      </section>
-      <section class="sec sec4 target">
-        <div class="back-text-2">point2</div>
-        <div>
-          <img
-            src="./images/app_screen.png"
-            alt="アプリの画面1"
-            class="picture-sec3"
-          />
-        </div>
-        <div class="point-text-2">
-          <h1>サクッとあなたの手元に</h1>
-          <p>
-            プレゼントが決まったら、近くの<br />
-            売り場や通販サイトのURLなどを<br />
-            表示してくれます。<br />
-            少ない時間でプレゼントを<br />
-            Getできます。
+            あの人はどんな<br />
+            誕生日プレゼントが欲しいのかな、、<br />
+            自分にはセンスがないから、、<br />
+            と、悩むあなたに。<br /><br />
+            思い出に残るプレゼントを<br />
+            簡単に、そして楽しく<br />
+            選べるように<br />
+            サポートします。<br />
           </p>
         </div>
       </section>
-      <section class="sec sec5 target">
-        <div class="back-text-3">point3</div>
-        <div class="point-text-3">
-          <h1>特別な日を忘れない</h1>
-          <p>
-            あなただけの誕生日カレンダーを<br />
-            作成できます。<br />
-            メモを残したり、投稿をもとに<br />
-            データを見返すこともできます。<br />
-          </p>
-        </div>
-        <div>
-          <img
-            src="./images/app_screen.png"
-            alt="アプリの画面1"
-            class="picture-sec3"
-          />
-        </div>
-      </section>
-      <section id="Download" class="sec sec6 target">
-        <div class="bg-pic-last onpic-info">
-          <h1 class="dow_text">今すぐダウンロード!</h1>
-          <div class="flex-2">
+
+      <section id="Point">
+        <div class="sec sec3 target">
+          <div class="back-text-1">point1</div>
+          <div class="point-text-1">
+            <h1>みんなのプレゼントを参考に</h1>
+            <p>
+              誰かにもらったり、あげたりした<br />
+              プレゼントを投稿できます。<br />
+              タグもつけることができ、<br />
+              1人1人に合ったプレゼントが<br />
+              見つかります。
+            </p>
+          </div>
+          <div>
             <img
-              src="./images/app_store.png"
-              alt="app_storeダウンロード"
-              class="dow-img"
+              src="./images/app_screen.png"
+              alt="アプリの画面1"
+              class="picture-sec3"
             />
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="sec sec4 target">
+          <div class="back-text-2">point2</div>
+          <div>
             <img
-              src="./images/google_play.png"
-              alt="google_playダウンロード"
-              class="dow-img"
+              src="./images/app_screen.png"
+              alt="アプリの画面1"
+              class="picture-sec3"
             />
+          </div>
+          <div class="point-text-2">
+            <h1>サクッとあなたの手元に</h1>
+            <p>
+              プレゼントが決まったら、近くの<br />
+              売り場や通販サイトのURLなどを<br />
+              表示してくれます。<br />
+              少ない時間でプレゼントを<br />
+              Getできます。
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="sec sec5 target">
+          <div class="back-text-3">point3</div>
+          <div class="point-text-3">
+            <h1>特別な日を忘れない</h1>
+            <p>
+              あなただけの誕生日カレンダーを<br />
+              作成できます。<br />
+              メモを残したり、投稿をもとに<br />
+              データを見返すこともできます。<br />
+            </p>
+          </div>
+          <div>
+            <img
+              src="./images/app_screen.png"
+              alt="アプリの画面1"
+              class="picture-sec3"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section id="Download" class="sec-last">
+        <div class="sec sec6 target">
+          <div class="bg-pic-last onpic-info">
+            <h1 class="dow_text">今すぐダウンロード!</h1>
+            <div class="flex-2">
+              <img
+                src="./images/app_store.png"
+                alt="app_storeダウンロード"
+                class="dow-img"
+              />
+              <img
+                src="./images/google_play.png"
+                alt="google_playダウンロード"
+                class="dow-img"
+              />
+            </div>
           </div>
         </div>
       </section>
