--- a/agemonzu/8-15/index.html
+++ b/agemonzu/8-15/index.html
@@ -97,15 +97,34 @@
             <!-- ここから実験 -->
               <!-- ここまで実験 -->
             <div id="baz" class="concept-txt">
-                <div class="box">
+                <!-- <div class="box">
                     <img class="concept-txt-img" src="img/concept_txt.png" alt="">
                     <div id="box1" ></div>
                     <div id="box2" ></div>
                     <div id="box3" ></div>
                     <div id="box4" ></div>
                     
-                </div>
+                </div> -->
                 
+
+                <p class="concept-txt-1">
+                    <span class="hide-text">わああああああああああああああああああ</span>
+                </p>
+                <p class="concept-txt-1">
+                    <span class="hide-text">わああああああああああああああああああ</span>
+                </p>
+                <p class="concept-txt-1">
+                    <span class="hide-text">わああああああああああああああああああ</span>
+                </p>
+
+                <!-- グルーピングしてタイミング揃える -->
+                <!-- <div class="concept-txt-1 hide-text-group">
+                    <div class="mt-2"><span class="hide-text">わああああああああああああああああああ</span></div>
+                    <div class="mt-2"><span class="hide-text">わああああああああああああああああああ</span></div>
+                    <div class="mt-2"><span class="hide-text">わああああああああああああああああああ</span></div>
+                    <div class="mt-2"><span class="hide-text">わああああああああああああああああああ</span></div>
+                </div> -->
+
                  <!-- <div class="concept-txt-1 ">うわあああああああ<div class="box1"></div> </div> -->
                 <!-- <p id="baz" class="concept-txt-1 ">友達に誘われて見に行った映画。<br>乗り気じゃなかったけど、行ってみたらすごく楽しい！</p>
                 <p id="baz" class="concept-txt-2">こんな経験ありませんか？</p>
